fix: Quill editor color contrast

--- a/frappe/public/less/common.less
+++ b/frappe/public/less/common.less
@@ -42,7 +42,7 @@ details > summary:focus {
 }
 
 .text-extra-muted {
-	color: @border-color !important;
+	color: var(--border-color) !important;
 }
 
 a.disabled,
@@ -169,7 +169,7 @@ a.badge-hover& {
 
 .border-(@position) {
 	.border-@{position} {
-		border-@{position}: 1px solid @border-color;
+		border-@{position}: 1px solid var(--border-color);
 	}
 }
 
@@ -179,11 +179,11 @@ a.badge-hover& {
 .border-(right);
 
 .border {
-	border: 1px solid @border-color;
+	border: 1px solid var(--border-color);
 }
 
 .rounded {
-	border-radius: 4px;
+	border-radius: var(--border-radius);
 }
 
 .close-inline {
