--- a/frappe/public/scss/desk/quill.scss
+++ b/frappe/public/scss/desk/quill.scss
@@ -9,6 +9,7 @@
 
 .ql-editor {
 	font-family: var(--font-stack);
+	color: var(--text-color);
 	line-height: 1.6;
 	background-color: var(--control-bg);
 	h1,
@@ -42,6 +43,21 @@
 	max-height: 600px;
 }
 
+.ql-snow {
+	.ql-editor {
+		min-height: 400px;
+		max-height: 600px;
+	}
+	.ql-stroke {
+		stroke: var(--icon-stroke);
+	}
+	.ql-picker-options {
+		border-color: var(--border-color) !important;
+		background-color: var(--bg-color);
+		border-radius: var(--border-radius);
+	}
+}
+
 .print-format {
 	.ql-snow .ql-editor {
 		height: auto;
@@ -51,6 +67,7 @@
 
 .ql-snow .ql-picker {
 	font-size: var(--text-sm);
+	color: var(--text-light);
 }
 
 .ql-snow .ql-picker-label {
